ensure no horizontal scroll on jobseeker dashboard

--- a/app/frontend/src/styles/application/jobseekers/jobseeker.scss
+++ b/app/frontend/src/styles/application/jobseekers/jobseeker.scss
@@ -16,5 +16,9 @@
     .govuk-main-wrapper__notification {
       background-color: govuk-colour('light-grey');
     }
+
+    .moj-filter-layout__content {
+      overflow-x: none;
+    }
   }
 }
